tests/badly_positioned_objmap/badly_positioned_objmap.exp
Error ---------------------------------------------------------------------------------------------------- objmap.js:3:1

Cannot call `c` because string [1] is not a valid argument of `$ObjMap` [2]. [incompatible-use]

   objmap.js:3:1
   3| c('string')();
      ^

References:
   objmap.js:3:3
   3| c('string')();
        ^^^^^^^^ [1]
   objmap.js:1:20
   1| type C = <H>(H) => $ObjMap<H, <X>(X)=>X>;
                         ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- objmapi.js:20:12

Cannot instantiate `PickKeysFromObject` because property `q` is missing in `MySpec` [1] in the first argument.
[invalid-obj-mapi]

   objmapi.js:20:12
   20|   type A = PickKeysFromObject<MySpec, typeof keys>;
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   objmapi.js:20:31
   20|   type A = PickKeysFromObject<MySpec, typeof keys>;
                                     ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- objmapi.js:23:17

Cannot assign `_a` to `_b` because property `q` is missing in object type [1] but exists in object type [2].
[prop-missing]

   objmapi.js:23:17
   23|   const _b: A = _a;
                       ^^

References:
   objmapi.js:21:19
   21|   declare var _a: {|x: number|};
                         ^^^^^^^^^^^^^ [1]
   objmapi.js:23:13
   23|   const _b: A = _a;
                   ^ [2]



Found 3 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
